// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment renders a comment with the author info 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
}

.emotion-6:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 1rem;
}

.emotion-0 {
  width: 36px;
  height: 36px;
  background: #e5ebed;
  border-radius: 100%;
  margin-right: 0.75rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  font-size: 0.875rem;
}

.emotion-2 {
  color: #a9b9c0;
  font-size: 0.75rem;
}

.emotion-5 {
  word-break: break-word;
  white-space: pre-wrap;
}

<div
  className="emotion-6"
>
  <header
    className="emotion-4"
  >
    <img
      className="emotion-0"
      src="0.jpeg"
    />
    <div
      className="emotion-3"
    >
      <Heading
        className="emotion-1"
        element="h4"
        testId="cf-ui-heading"
      >
        John Doe
      </Heading>
      <time
        className="emotion-2"
        dateTime="2019-01-01T10:00:00.000Z"
        title="Tuesday, January 1, 2019 10:00 AM"
      >
        a few seconds ago
      </time>
    </div>
    <CommentActions
      comment={
        Object {
          "body": "Foo",
          "sys": Object {
            "createdAt": "2019-01-01T10:00:00.000Z",
            "createdBy": Object {
              "avatarUrl": "0.jpeg",
              "firstName": "John",
              "lastName": "Doe",
              "sys": Object {
                "id": "abc",
              },
            },
            "id": "xyz",
          },
        }
      }
      onRemove={[Function]}
    />
  </header>
  <div
    className="emotion-5"
  >
    Foo
  </div>
</div>
`;

exports[`Comment renders a comment without the author info 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 1rem;
}

.emotion-6:last-child {
  margin-bottom: 0;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 1rem;
}

.emotion-0 {
  width: 36px;
  height: 36px;
  background: #e5ebed;
  border-radius: 100%;
  margin-right: 0.75rem;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  font-size: 0.875rem;
}

.emotion-2 {
  color: #a9b9c0;
  font-size: 0.75rem;
}

.emotion-5 {
  word-break: break-word;
  white-space: pre-wrap;
}

<div
  className="emotion-6"
>
  <header
    className="emotion-4"
  >
    <img
      className="emotion-0"
    />
    <div
      className="emotion-3"
    >
      <Heading
        className="emotion-1"
        element="h4"
        testId="cf-ui-heading"
      >
        <Tooltip
          containerElement="span"
          content="The author of this comment is no longer a member of this organization"
          isVisible={false}
          maxWidth={360}
          place="top"
          testId="cf-ui-tooltip"
        >
          (Deactivated user)
        </Tooltip>
      </Heading>
      <time
        className="emotion-2"
        dateTime="2019-01-01T10:00:00.000Z"
        title="Tuesday, January 1, 2019 10:00 AM"
      >
        a few seconds ago
      </time>
    </div>
    <CommentActions
      comment={
        Object {
          "body": "Boo",
          "sys": Object {
            "createdAt": "2019-01-01T10:00:00.000Z",
            "createdBy": Object {
              "sys": Object {
                "id": "abc",
              },
            },
            "id": "xyz",
          },
        }
      }
      onRemove={[Function]}
    />
  </header>
  <div
    className="emotion-5"
  >
    Boo
  </div>
</div>
`;
